# aspnetcore/src/IO.Swagger/wwwroot/swagger-original.json
@@ -141,6 +141,54 @@
           }
         }
       }
+    },
+    "/timer/tick" : {
+      "description" : "execute a timer tick",
+      "post" : {
+        "responses" : {
+          "200" : {
+            "description" : "task executed"
+          }
+        }
+      }
+    },
+    "/bloomberg/decrypt" : {
+      "description" : "decrypt data received from bloomberg",
+      "post" : {
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/envelope"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "data descripted and sent for processing"
+          }
+        }
+      }
+    },
+    "/bloomberg/process" : {
+      "description" : "process data received from bloomberg",
+      "post" : {
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/envelope"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "data processed"
+          }
+        }
+      }
     }
   },
   "components" : {
